# relwarc-api-client

./: LICENSE.txt  README.md
go/: errors.go  go.mod  jobstatus.go  readerlength.go  relwarc.go
go/cmd/relwarc-api-client/: .gitignore  client.go
js/: cli.js  package-lock.json  package.json  page-tar.js  relwarc.js
python/: relwarc.py  requirements.txt
rust/: Cargo.toml
rust/src/: errors.rs  job_status.rs  lib.rs  reader_length.rs
