[package]
name = "relwarc-api-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.5.4"
serde_json = "1.0.135"
serde = { version = "1.0.194", features = ["derive"] }
tungstenite = { version = "0.26.1", features = ["native-tls"] }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
clap = "4.5.27"